--- a/Capstone_Coursera.ipynb
+++ b/Capstone_Coursera.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fac27114",
+   "metadata": {},
+   "source": [
+    "Jupyter Notebook para el proyecto final CAPSTONE de Coursera. En el se realizaran las tareas del curso de Ciencia de Datos Aplicada de IBM"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "ef0a64f4",
